Fixed scrollbar

--- a/src/sample/StyleSheet.css
+++ b/src/sample/StyleSheet.css
@@ -117,7 +117,7 @@ VBox{
 
 .scroll-bar:horizontal .thumb,
 .scroll-bar:vertical .thumb {
- -fx-background-color :transparent;
+ -fx-background-color :derive(#4D4C4F,10.0%);
  -fx-background-insets : 2.0, 0.0, 0.0;
  -fx-background-radius : 2.0em;
 }
